force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Override_Minimum_Balance__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Override_Minimum_Balance__c</fullName>
    <description>Indicates whether the Minimum Allowable Balance can be overridden for this Payee Leave Event</description>
    <inlineHelpText>Indicates whether the Minimum Allowable Balance can be overridden for this Payee Leave Event</inlineHelpText>
    <label>Override Minimum Balance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>