force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Part_Day_Override__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Part_Day_Override__c</fullName>
    <description>Indicates this is a part-day of leave and the hours entered will override any related Work Schedule</description>
    <inlineHelpText>Indicates this is a part-day of leave and the hours entered will override any related Work Schedule</inlineHelpText>
    <label>Part Day Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>