force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Pay_in_Advance__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_in_Advance__c</fullName>
    <description>By selecting &apos;Yes&apos; the full duration of this payee leave event will be paid in the calendar period immediately prior to the leave start date.</description>
    <inlineHelpText>By selecting &apos;Yes&apos; the full duration of this payee leave event will be paid in the calendar period immediately prior to the leave start date.</inlineHelpText>
    <label>Pay in Advance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>