force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Payee_Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee_Leave_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the related Payee Leave Rule</description>
    <inlineHelpText>A lookup to the related Payee Leave Rule</inlineHelpText>
    <label>Payee Leave Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.tc9_pr__Payee__c</field>
            <operation>equals</operation>
            <valueField>tc9_pr__Payee_Leave_Rule__c.tc9_pr__Payee__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Payee_Leave_Rule__c</referenceTo>
    <relationshipLabel>Payee Leave Events</relationshipLabel>
    <relationshipName>Payee_Leave_Events</relationshipName>
    <type>Lookup</type>
</CustomField>