force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Entity__c</fullName>
    <description>Payment Entity Name. Used on email templates</description>
    <formula>tc9_pr__Assignment__r.tc9_pr__Payment_Entity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment Entity Name. Used on email templates</inlineHelpText>
    <label>Payment Entity</label>
    <type>Text</type>
</CustomField>