force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Primary_Approver_Current_Link_Token__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Primary_Approver_Current_Link_Token__c</fullName>
    <description>The Primary Leave Request Approvers current Leave Request Link Token. Used on email templates</description>
    <formula>tc9_pr__Assignment__r.tc9_pr__Leave_Approver__r.tc9_pr__Approver_Link_Token__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Primary Leave Request Approvers current Leave Request Link Token. Used on email templates</inlineHelpText>
    <label>Primary Approver Current Link Token</label>
    <type>Text</type>
</CustomField>