force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Processed_by_Interpretation_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Processed_by_Interpretation_Rule__c</fullName>
    <description>Timesheet related Payee Leave Event which will be processed by an Interpretation Rule</description>
    <inlineHelpText>Timesheet related Payee Leave Event which will be processed by an Interpretation Rule</inlineHelpText>
    <label>Processed by Interpretation Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>