force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Processing_Status__c</fullName>
    <description>The current Processing Status of this Payee Leave Event</description>
    <inlineHelpText>The current Processing Status of this Payee Leave Event</inlineHelpText>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Fully Processed</fullName>
            </value>
            <value>
                <fullName>Part Processed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
                <isActive>false</isActive>
                <label>Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>