force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Reason__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Reason__c</fullName>
    <description>The user-entered reason for this Payee Leave Event</description>
    <inlineHelpText>The user-entered reason for this Payee Leave Event</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual Leave</fullName>
            </value>
            <value>
                <fullName>Carers Leave</fullName>
            </value>
            <value>
                <fullName>Long Service Leave</fullName>
            </value>
            <value>
                <fullName>Personal Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>