force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Rejection_Comments__c</fullName>
    <description>Comments about the Payee Leave Event to indicate why the Approval Status was changed to Rejected</description>
    <inlineHelpText>Comments about the Payee Leave Event to indicate why the Approval Status was changed to Rejected</inlineHelpText>
    <label>Rejection Comments</label>
    <type>TextArea</type>
</CustomField>