force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Selected_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Selected_Pay_Rate__c</fullName>
    <description>Select how the Leave Take should be paid and consequently how the leave balance will accrue and be deducted.</description>
    <inlineHelpText>Select how the Leave Take should be paid and consequently how the leave balance will accrue and be deducted.</inlineHelpText>
    <label>Selected Pay Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Leave_Pay_Rates</valueSetName>
    </valueSet>
</CustomField>