force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Skip_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Skip_Manager_Approval__c</fullName>
    <description>Indicates whether the manager approval process can be skipped for this Payee Leave Event</description>
    <inlineHelpText>Indicates whether the manager approval process can be skipped for this Payee Leave Event</inlineHelpText>
    <label>Skip Manager Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>