force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Source_Leave_Event__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Source_Leave_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used for part-day leave requests that have been split from a multi-day request. It links the new, smaller leave events back to their original parent request.</description>
    <inlineHelpText>Links a split leave event to the original, larger request from which it was created. This field is key for tracking the full lifecycle of a part-day leave application.</inlineHelpText>
    <label>Source Leave Event</label>
    <referenceTo>tc9_pr__Payee_Leave_Event__c</referenceTo>
    <relationshipLabel>Payee Leave Events</relationshipLabel>
    <relationshipName>Payee_Leave_Events</relationshipName>
    <type>Lookup</type>
</CustomField>