force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Timesheet_Entry_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Timesheet_Entry_Creation_Status__c</fullName>
    <description>The status of the automated process that creates timesheet entries from this leave event.</description>
    <label>Timesheet Entry Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Record_Creation_Status</valueSetName>
    </valueSet>
</CustomField>