force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Timesheet_Entry_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Timesheet_Entry_Last_Updated__c</fullName>
    <description>This field records the last date and time the related timesheet entry was updated by this leave event.</description>
    <inlineHelpText>This field records the last date and time the related timesheet entry was updated by this leave event.</inlineHelpText>
    <label>Timesheet Entry Last Updated</label>
    <type>DateTime</type>
</CustomField>