force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Void__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Void__c</fullName>
    <description>Indicates whether a user has voided this Payee Leave Event to prevent it from being included in Pay Batch calculation</description>
    <inlineHelpText>Indicates whether a user has voided this Payee Leave Event to prevent it from being included in Pay Batch calculation</inlineHelpText>
    <label>Void</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>