force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Unpaid__c</fullName>
    <formula>if(tc9_pr__Payee_Leave_Rule__r.tc9_pr__Leave_Rule__r.tc9_pr__Pay_Code__r.tc9_pr__Pay_Rate_Multiplier__c = 0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid</label>
    <type>Checkbox</type>
</CustomField>