force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/recordTypes/Draft.recordType-meta.xml
<RecordType>
    <fullName>Draft</fullName>
    <active>true</active>
    <label>Draft</label>
</RecordType>