force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/recordTypes/tc9_pr__Leave_Cash_Out.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Leave_Cash_Out</fullName>
    <active>true</active>
    <description>Used to process a pay out of leave and reduce the leave balance even though leave is not taken</description>
    <label>Leave Cash Out</label>
</RecordType>