force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/recordTypes/tc9_pr__Leave_Credit.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Leave_Credit</fullName>
    <active>true</active>
    <description>Used to indicate that a Leave Event should be added to the payee&apos;s leave balance</description>
    <label>Leave Credit</label>
</RecordType>