force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/recordTypes/tc9_pr__Leave_Take.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Leave_Take</fullName>
    <active>true</active>
    <description>Used to indicate that a Leave Event should be reduced from the payee&apos;s leave balance</description>
    <label>Leave Take</label>
</RecordType>