force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/recordTypes/tc9_pr__Pre_Approval.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Pre_Approval</fullName>
    <active>true</active>
    <description>Used to enable timesheet employee&apos;s to have their leave approved ahead of time. This record type will not be processed, the leave event generated by the employees timesheet will be.</description>
    <label>Pre Approval</label>
</RecordType>