force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Approval_Status__c</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>tc9_pr__Assignment__c</columns>
    <columns>tc9_pr__Start_Date__c</columns>
    <columns>tc9_pr__Payee_Leave_Rule__c</columns>
    <columns>tc9_pr__Processing_Status__c</columns>
    <columns>tc9_pr__Override_Minimum_Balance__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>