force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/listViews/tc9_pr__Approved_Leave.listView-meta.xml
<ListView>
    <fullName>tc9_pr__Approved_Leave</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__Leave_Type__c</columns>
    <columns>tc9_pr__Approval_Status__c</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>tc9_pr__Assignment__c</columns>
    <columns>tc9_pr__Start_Date__c</columns>
    <columns>tc9_pr__End_Date__c</columns>
    <columns>tc9_pr__Hours__c</columns>
    <columns>tc9_pr__Payee_Leave_Rule__c</columns>
    <columns>tc9_pr__Processing_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_pr__Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Leave</label>
</ListView>